--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -9,7 +9,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 # Find LLVM package
+set(LLVM_DIR "/usr/local/opt/llvm/lib/cmake/llvm")
 find_package(LLVM REQUIRED CONFIG)
+
+# Print out the LLVM version and libraries
+message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 # Set LLVM include directories
 include_directories(${LLVM_INCLUDE_DIRS})
