--- a/editor/package.json
+++ b/editor/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "build-win": "electron-packager ./editor --platform=win32 --arch=x64 --overwrite",
-    "build-mac": "electron-packager ./editor --platform=darwin --arch=x64 --overwrite",
-    "build-linux": "electron-packager ./editor --platform=linux --arch=x64 --overwrite"
+    "build-win": "electron-packager . --platform=win32 --arch=x64 --overwrite",
+    "build-mac": "electron-packager . --platform=darwin --arch=x64 --overwrite",
+    "build-linux": "electron-packager . --platform=linux --arch=x64 --overwrite"
   },
   "author": "",
   "license": "ISC",
