--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@ build-editor/
 CMakeFiles/
 CMakeCache.txt
 cmake_install.cmake
-Makefile
 *.cmake
 
 experiments/
@@ -21,3 +20,4 @@ output/
 _tmp_*
 *.zip
 lppide-*
+ignore
